--- a/package.json
+++ b/package.json
@@ -1,29 +1,36 @@
 {
   "name": "app",
   "private": "true",
+  "scripts": {
+    "start": "webpack-dev-server --open",
+    "build": "webpack --watch --config webpack.config.js",
+    "build:dev": "webpack --mode development",
+    "lint:css": "stylelint '**/*.{css,scss}'"
+  },
   "dependencies": {
-    "@hotwired/stimulus": "^3.2.2",
-    "@hotwired/turbo-rails": "^8.0.0-beta.2",
-    "@reduxjs/toolkit": "^2.0.1",
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
+    "@hotwired/turbo-rails": "^7.3.0",
+    "@rails/webpacker": "5.4.4",
+    "@reduxjs/toolkit": "^1.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.2",
-    "redux": "^5.0.1",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
-  },
-  "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.18.0",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.7",
-    "@babel/preset-react": "^7.23.3",
-    "babel-loader": "^9.1.3",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^21.0.0",
-    "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^3.21.0"
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "babel-loader": "8.0.6",
+    "stylelint": "13.x",
+    "stylelint-config-standard": "21.x",
+    "stylelint-csstree-validator": "1.x",
+    "stylelint-scss": "3.x",
+    "webpack": "5",
+    "webpack-cli": "4",
+    "webpack-dev-server": "4"
   }
 }
